// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-1/bail-short: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-1/bail-short: metadata ids 1`] = `
[
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-1/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-1/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/bail-long: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-long.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/bail-long: metadata ids 1`] = `
[
  "__tests__/bail/bail-long.js:",
  "__tests__/bail/bail-long.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/bail-short: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/bail-short: metadata ids 1`] = `
[
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/bail-no-env-N/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-cases: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-cases: metadata ids 1`] = `
[
  "__tests__/default/duplicate-cases.js:",
  "__tests__/default/duplicate-cases.js:test_0",
  "__tests__/default/duplicate-cases.js:test_1",
  "__tests__/default/duplicate-cases.js:test_2",
  "__tests__/default/duplicate-cases.js:test_3",
  "__tests__/default/duplicate-cases.js:",
  "__tests__/default/duplicate-cases.js:test_0",
  "__tests__/default/duplicate-cases.js:test_1",
  "__tests__/default/duplicate-cases.js:test_2",
  "__tests__/default/duplicate-cases.js:test_3",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-generation: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-generation: metadata ids 1`] = `
[
  "__tests__/default/duplicate-generation.js:",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:test_1",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:test_1",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-name: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-name.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "test_todo",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/duplicate-name: metadata ids 1`] = `
[
  "__tests__/default/duplicate-name.js:",
  "__tests__/default/duplicate-name.js:test_0",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_2",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:test_4",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:",
  "__tests__/default/duplicate-name.js:test_0",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_5",
  "__tests__/default/duplicate-name.js:test_2",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:test_4",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-afterAll-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-afterAll-fail: metadata ids 1`] = `
[
  "__tests__/default/hook-afterAll-fail.js:",
  "__tests__/default/hook-afterAll-fail.js:test_0",
  "__tests__/default/hook-afterAll-fail.js:",
  "__tests__/default/hook-afterAll-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-beforeAll-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-beforeAll-fail: metadata ids 1`] = `
[
  "__tests__/default/hook-beforeAll-fail.js:",
  "__tests__/default/hook-beforeAll-fail.js:test_0",
  "__tests__/default/hook-beforeAll-fail.js:",
  "__tests__/default/hook-beforeAll-fail.js:test_1",
  "__tests__/default/hook-beforeAll-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-nesting: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-nesting.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/hook-nesting: metadata ids 1`] = `
[
  "__tests__/default/hook-nesting.js:",
  "__tests__/default/hook-nesting.js:test_0",
  "__tests__/default/hook-nesting.js:test_1",
  "__tests__/default/hook-nesting.js:",
  "__tests__/default/hook-nesting.js:test_0",
  "__tests__/default/hook-nesting.js:test_1",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-concurrent: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-concurrent.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-concurrent: metadata ids 1`] = `
[
  "__tests__/default/test-concurrent.js:",
  "__tests__/default/test-concurrent.js:test_0",
  "__tests__/default/test-concurrent.js:test_1",
  "__tests__/default/test-concurrent.js:test_2",
  "__tests__/default/test-concurrent.js:test_3",
  "__tests__/default/test-concurrent.js:test_4",
  "__tests__/default/test-concurrent.js:",
  "__tests__/default/test-concurrent.js:test_0",
  "__tests__/default/test-concurrent.js:test_1",
  "__tests__/default/test-concurrent.js:test_2",
  "__tests__/default/test-concurrent.js:test_3",
  "__tests__/default/test-concurrent.js:test_4",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-fail: metadata ids 1`] = `
[
  "__tests__/default/test-fail.js:",
  "__tests__/default/test-fail.js:test_0",
  "__tests__/default/test-fail.js:",
  "__tests__/default/test-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-pass: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-pass.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-pass: metadata ids 1`] = `
[
  "__tests__/default/test-pass.js:",
  "__tests__/default/test-pass.js:test_0",
  "__tests__/default/test-pass.js:",
  "__tests__/default/test-pass.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-retry: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-retry.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-retry: metadata ids 1`] = `
[
  "__tests__/default/test-retry.js:",
  "__tests__/default/test-retry.js:test_0",
  "__tests__/default/test-retry.js:test_0",
  "__tests__/default/test-retry.js:",
  "__tests__/default/test-retry.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-skip: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-skip.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-skip: metadata ids 1`] = `
[
  "__tests__/default/test-skip.js:",
  "__tests__/default/test-skip.js:",
  "__tests__/default/test-skip.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-todo: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-todo.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "test_todo",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/29.x.x/no-env-N/test-todo: metadata ids 1`] = `
[
  "__tests__/default/test-todo.js:",
  "__tests__/default/test-todo.js:test_0",
  "__tests__/default/test-todo.js:",
  "__tests__/default/test-todo.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-1/bail-short: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-1/bail-short: metadata ids 1`] = `
[
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-1/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-1/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/bail-long: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-long.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-long.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/bail-long: metadata ids 1`] = `
[
  "__tests__/bail/bail-long.js:",
  "__tests__/bail/bail-long.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/bail-short: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/bail/bail-short.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/bail/bail-short.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/bail-short: metadata ids 1`] = `
[
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
  "__tests__/bail/bail-short.js:",
  "__tests__/bail/bail-short.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/bail-no-env-N/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-cases: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_2",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-cases.js",
    "testId": "test_3",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-cases: metadata ids 1`] = `
[
  "__tests__/default/duplicate-cases.js:",
  "__tests__/default/duplicate-cases.js:test_0",
  "__tests__/default/duplicate-cases.js:test_1",
  "__tests__/default/duplicate-cases.js:test_2",
  "__tests__/default/duplicate-cases.js:test_3",
  "__tests__/default/duplicate-cases.js:",
  "__tests__/default/duplicate-cases.js:test_0",
  "__tests__/default/duplicate-cases.js:test_1",
  "__tests__/default/duplicate-cases.js:test_2",
  "__tests__/default/duplicate-cases.js:test_3",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-generation: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-generation.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-generation: metadata ids 1`] = `
[
  "__tests__/default/duplicate-generation.js:",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:test_1",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:",
  "__tests__/default/duplicate-generation.js:test_0",
  "__tests__/default/duplicate-generation.js:test_1",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-name: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/duplicate-name.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_2",
    "type": "test_todo",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_4",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/duplicate-name.js",
    "testId": "test_5",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/duplicate-name: metadata ids 1`] = `
[
  "__tests__/default/duplicate-name.js:",
  "__tests__/default/duplicate-name.js:test_0",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_2",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:test_4",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:",
  "__tests__/default/duplicate-name.js:test_0",
  "__tests__/default/duplicate-name.js:test_1",
  "__tests__/default/duplicate-name.js:test_5",
  "__tests__/default/duplicate-name.js:test_2",
  "__tests__/default/duplicate-name.js:test_3",
  "__tests__/default/duplicate-name.js:test_4",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/globalMetadata: emitted events 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/globalMetadata: metadata ids 1`] = `[]`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-afterAll-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-afterAll-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-afterAll-fail: metadata ids 1`] = `
[
  "__tests__/default/hook-afterAll-fail.js:",
  "__tests__/default/hook-afterAll-fail.js:test_0",
  "__tests__/default/hook-afterAll-fail.js:",
  "__tests__/default/hook-afterAll-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-beforeAll-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-beforeAll-fail.js",
    "testId": "test_1",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-beforeAll-fail: metadata ids 1`] = `
[
  "__tests__/default/hook-beforeAll-fail.js:",
  "__tests__/default/hook-beforeAll-fail.js:test_0",
  "__tests__/default/hook-beforeAll-fail.js:",
  "__tests__/default/hook-beforeAll-fail.js:test_1",
  "__tests__/default/hook-beforeAll-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-nesting: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/hook-nesting.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/hook-nesting.js",
    "testId": "test_1",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/hook-nesting: metadata ids 1`] = `
[
  "__tests__/default/hook-nesting.js:",
  "__tests__/default/hook-nesting.js:test_0",
  "__tests__/default/hook-nesting.js:test_1",
  "__tests__/default/hook-nesting.js:",
  "__tests__/default/hook-nesting.js:test_0",
  "__tests__/default/hook-nesting.js:test_1",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-concurrent: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-concurrent.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_1",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_2",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_3",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-concurrent.js",
    "testId": "test_4",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-concurrent: metadata ids 1`] = `
[
  "__tests__/default/test-concurrent.js:",
  "__tests__/default/test-concurrent.js:test_0",
  "__tests__/default/test-concurrent.js:test_1",
  "__tests__/default/test-concurrent.js:test_2",
  "__tests__/default/test-concurrent.js:test_3",
  "__tests__/default/test-concurrent.js:test_4",
  "__tests__/default/test-concurrent.js:",
  "__tests__/default/test-concurrent.js:test_0",
  "__tests__/default/test-concurrent.js:test_1",
  "__tests__/default/test-concurrent.js:test_2",
  "__tests__/default/test-concurrent.js:test_3",
  "__tests__/default/test-concurrent.js:test_4",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-fail: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-fail.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-fail.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-fail: metadata ids 1`] = `
[
  "__tests__/default/test-fail.js:",
  "__tests__/default/test-fail.js:test_0",
  "__tests__/default/test-fail.js:",
  "__tests__/default/test-fail.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-pass: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-pass.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-pass.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-pass: metadata ids 1`] = `
[
  "__tests__/default/test-pass.js:",
  "__tests__/default/test-pass.js:test_0",
  "__tests__/default/test-pass.js:",
  "__tests__/default/test-pass.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-retry: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-retry.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_done",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_retry",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-retry.js",
    "testId": "test_0",
    "type": "test_done",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-retry: metadata ids 1`] = `
[
  "__tests__/default/test-retry.js:",
  "__tests__/default/test-retry.js:test_0",
  "__tests__/default/test-retry.js:test_0",
  "__tests__/default/test-retry.js:",
  "__tests__/default/test-retry.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-skip: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-skip.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-skip.js",
    "testId": "test_0",
    "type": "test_skip",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-skip: metadata ids 1`] = `
[
  "__tests__/default/test-skip.js:",
  "__tests__/default/test-skip.js:",
  "__tests__/default/test-skip.js:test_0",
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-todo: emitted events 1`] = `
[
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "type": "add_test_file",
  },
  {
    "describeId": "describe_0",
    "testFilePath": "__tests__/default/test-todo.js",
    "type": "start_describe_definition",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "add_test",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "test_start",
  },
  {
    "testFilePath": "__tests__/default/test-todo.js",
    "testId": "test_0",
    "type": "test_todo",
  },
]
`;

exports[`Fallback API e2e/__fixtures__/30.x.x/no-env-N/test-todo: metadata ids 1`] = `
[
  "__tests__/default/test-todo.js:",
  "__tests__/default/test-todo.js:test_0",
  "__tests__/default/test-todo.js:",
  "__tests__/default/test-todo.js:test_0",
]
`;
